Fix #171 - Unreadable 'customize this page' blocks.

--- a/src/sass/palettes/justblack/_pages.scss
+++ b/src/sass/palettes/justblack/_pages.scss
@@ -29,6 +29,10 @@
     #sidebar & {
         @include jc-theme-gradient-secondary();
     }
+
+    form & {
+        background-color: var(--bs-card-cap-bg)!important;
+    }
 }
 
 /** JustBlack Palette - Specific pages - Tabs */
